--- a/arch-package/PKGBUILD
+++ b/arch-package/PKGBUILD
@@ -16,7 +16,7 @@ depends=('libpng' 'libtiff' 'openexr' 'python' 'desktop-file-utils' 'python-requ
          'shared-mime-info' 'hicolor-icon-theme' 'xdg-utils' 'openjpeg2' 'glew' 'python-numpy'
          'freetype2' 'openal' 'ffmpeg' 'fftw' 'boost-libs' 'opencollada' 'openxr'
          'openimageio' 'libsndfile' 'jack' 'opencolorio' 'openshadinglanguage' 'alembic'
-         'jemalloc' 'libspnav' 'ptex' 'opensubdiv' 'openvdb' 'log4cplus' 'sdl2' 'draco' 'libepoxy')
+         'jemalloc' 'libspnav' 'ptex' 'opensubdiv' 'openvdb' 'log4cplus' 'sdl2' 'draco' 'libepoxy' 'embree')
 makedepends=('cmake' 'boost' 'mesa' 'git' 'llvm' 'ninja' 'patch')
 options=(!strip)
 source=("git+https://git.blender.org/blender.git#tag=v$pkgver"
@@ -24,9 +24,11 @@ source=("git+https://git.blender.org/blender.git#tag=v$pkgver"
         "git+https://git.blender.org/blender-addons-contrib.git"
         "git+https://git.blender.org/blender-translations.git"
         "git+https://git.blender.org/blender-dev-tools.git"
+        "git+https://github.com/DLTcollab/sse2neon.git#tag=v1.5.1"
         force-draco1.patch
         force-draco2.patch)
 sha512sums=('SKIP'
+            'SKIP'
             'SKIP'
             'SKIP'
             'SKIP'
@@ -71,9 +73,10 @@ build() {
     -DPYTHON_LIBRARY=python$PYTHON_VER \
     -DPYTHON_INCLUDE_DIRS=/usr/include/python$PYTHON_VER \
     -DCMAKE_CXX_FLAGS="-I /usr/include/python$PYTHON_VER" \
+    -DSSE2NEON_INCLUDE_DIR="$srcdir/sse2neon" \
     -DWITH_CYCLES=ON \
     -DWITH_RAYOPTIMIZATION=ON \
-    -DWITH_CYCLES_EMBREE=OFF \
+    -DWITH_CYCLES_EMBREE=ON \
     -DWITH_ALEMBIC=ON \
     -DWITH_CYCLES_DEVICE_CUDA=OFF \
     -DWITH_CYCLES_DEVICE_OPTIX=OFF \
