--- a/arch-deps/ispc/PKGBUILD
+++ b/arch-deps/ispc/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Bruno Pagani <archange@archlinux.org>
 
 pkgname=ispc
-pkgver=1.18.1
+pkgver=1.18.1.r290+ge88e49e
 pkgrel=1
 pkgdesc="Compiler for high-performance SIMD programming on the CPU"
 arch=('x86_64' 'aarch64')
@@ -10,37 +10,29 @@ url="https://ispc.github.io/"
 license=(BSD)
 depends=(ncurses zlib llvm-libs clang spirv-llvm-translator)
 makedepends=(llvm python cmake level-zero-headers level-zero-loader openmp vc-intrinsics)
+makedepends_x86_64=(lib32-glibc)
 optdepends=(
     'intel-compute-runtime: GPU support'
     'level-zero-loader: GPU support'
     'openmp: GPU support'
 )
-_gtestcommit=6a7ed316a5cdc07b6d26362c90770787513822d4
-source=(https://github.com/ispc/ispc/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz
-        googletest-${_gtestcommit}.zip::https://github.com/google/googletest/archive/${_gtestcommit}.zip
-        ispc-libclang-cpp.patch::https://raw.githubusercontent.com/archlinux/svntogit-community/packages/ispc/trunk/ispc-libclang-cpp.patch
-        ispc-llvm14.patch::https://github.com/ispc/ispc/pull/2335.patch)
-sha256sums=('5b004c121e7a39c8654bb61930a240e4bd3e432a80d851c6281fae49f9aca7b7'
-            '718cc64f6f563399a228fc439b6ea9cb58d062e66e5340b92ca0f26adecfaac5'
-            '51ae0943cbce2b3f29549c5fb262e8620ad5e171283a83255e15dac20c86bf9f'
-            'dd1f1caa91c8d394f2753f2637af9980031507e6f4aa575154c92ab5f3ad4246')
+_gtestcommit=bf0701daa9f5b30e5882e2f8f9a5280bcba87e77
+_ispccommit=e88e49eb161aa5e75aecc843d479d5e757f5c43e
+source=(ispc-${_ispccommit}.tar.gz::https://github.com/ispc/ispc/archive/${_ispccommit}.tar.gz
+        googletest-${_gtestcommit}.tar.gz::https://github.com/google/googletest/archive/${_gtestcommit}.tar.gz
+        ispc-libclang-linking.patch::https://github.com/ispc/ispc/pull/2422.patch)
+sha256sums=('e0181f0f4dc78809166a8c28a46a3cb1f24d3dbbead4f4ff7e4ebfd8d109ebbd'
+            'b44b5d37b62e7e54887f07f9862e7dce537aa9922e80995007bcffe6ab9058d4'
+            'fdd8d27f1e7e55d414a1cd99b60758b3ef7aa6de729323213628108f4025274d')
 
 prepare() {
+  mv ispc-${_ispccommit} ispc-${pkgver} 
   cd ${pkgname}-${pkgver}
-  patch -p1 < ../ispc-libclang-cpp.patch # Build with unified libclang-cpp.so
-  # Verbose output on tests failures
-  sed -i 's|COMMAND ${LIT_COMMAND} ${LIT_ARGS}|COMMAND ${LIT_COMMAND} ${LIT_ARGS} "--verbose"|' tests/CMakeLists.txt
-  # Remove tests that requires DUMPS (https://github.com/ispc/ispc/issues/1752)
-  sed -i '/debug-phase/d' tests/lit-tests/arg_parsing_errors.ispc
+  # Build with unified libclang-cpp.so
+  patch -p1 < ../ispc-libclang-linking.patch
   # Add Google Test
   rmdir ispcrt/tests/vendor/google/googletest
   mv ../googletest-${_gtestcommit} ispcrt/tests/vendor/google/googletest
-  # Broken check?
-  sed -i 's|NOT EXISTS "${PROJECT_SOURCE_DIR}/ispcrt/tests/vendor/google/googletest/CMakeLists.txt"|FALSE|' ispcrt/tests/CMakeLists.txt
-  # https://github.com/google/googletest/issues/3427
-  sed -i 's/-Werror//' ispcrt/tests/vendor/google/googletest/googletest/cmake/internal_utils.cmake
-  # LLVM14 compat
-  patch -p1 < ../ispc-llvm14.patch
 }
 
 build() {
@@ -49,7 +41,6 @@ build() {
   cmake -B build -S ${pkgname}-${pkgver} \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DISPC_INCLUDE_EXAMPLES=OFF \
-    -DISPC_NO_DUMPS=ON \
     -DXE_ENABLED=ON \
     -DISPC_INCLUDE_XE_EXAMPLES=OFF \
     -DXE_DEPS_DIR=/usr
