--- a/arch-package/PKGBUILD
+++ b/arch-package/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=3.4.1
 pkgrel=1
 epoch=20
 pkgdesc="A fully integrated 3D graphics creation suite"
-arch=('x86_64' 'armv7h' 'aarch64')
+arch=('x86_64' 'aarch64')
 license=('GPL')
 url="http://www.blender.org"
 depends=('libpng' 'libtiff' 'openexr' 'python' 'desktop-file-utils' 'python-requests'
@@ -24,7 +24,8 @@ source=("git+https://git.blender.org/blender.git#tag=v$pkgver"
         "git+https://git.blender.org/blender-addons-contrib.git"
         "git+https://git.blender.org/blender-translations.git"
         "git+https://git.blender.org/blender-dev-tools.git"
-        "git+https://github.com/DLTcollab/sse2neon.git#tag=v1.5.1"
+        "git+https://github.com/DLTcollab/sse2neon.git#tag=v1.6.0"
+        blender-numpy.patch
         force-draco1.patch
         force-draco2.patch)
 sha512sums=('SKIP'
@@ -33,6 +34,7 @@ sha512sums=('SKIP'
             'SKIP'
             'SKIP'
             'SKIP'
+            'a39d9a13515b71d3b686d8f011b3eb9ee45de04f716627d711c5119317cb130c587da1b806f276f97064f814cfce3790b201731f047e5ec01e7d6f65acd04b3b'
             'e239da4f3906f1b54265435181cf770bae3d269c8d915df9a73861e6ee71ec70bf2339426e7c81a91e5a567273b3b3742d7a99feefd3398d821b26e1ff3a56d0'
             '527ab66e5eace777de0043c1ca5787a488f6471450ce67fd6d08137ad0ef56177bc0c17696f30a5fca23fa55d8ca9c3f30cb7b17550dba2dbd8e89ca0b361990')
 
@@ -47,8 +49,13 @@ prepare() {
   git -c protocol.file.allow=always submodule update
   git submodule foreach git checkout v${pkgver}
 
+  git format-patch -1 --stdout 79837c5ed4b5 | patch -Np1
+
   patch -p1 -i "$srcdir"/force-draco1.patch
   patch -p1 -d release/scripts/addons -i "$srcdir"/force-draco2.patch
+
+  # fix for FS#77376
+  patch -p1 -d release/scripts/addons -i "$srcdir"/blender-numpy.patch
 }
 
 get_pyver() {
