--- a/arch-deps/embree/PKGBUILD
+++ b/arch-deps/embree/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Lukas Jirkovsky <l.jirkovsky@gmail.com>
 
 pkgname=embree
-pkgver=4.0.0
+pkgver=3.13.5
 pkgrel=10
 pkgdesc="Collection of high-performance ray tracing kernels"
 arch=('x86_64' 'aarch64')
@@ -12,7 +12,7 @@ license=('Apache')
 depends=('intel-tbb')
 makedepends=('cmake' 'ispc' 'freeglut' 'libxmu')
 source=( 
-        "git+https://github.com/embree/embree.git#tag=v$pkgver"
+        "git+https://github.com/embree/embree.git#branch=devel3"
 )
 sha256sums=(
         'SKIP'
