--- a/arch-deps/openpgl/PKGBUILD
+++ b/arch-deps/openpgl/PKGBUILD
@@ -15,6 +15,9 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/OpenPathGuidingLibrary/open
 sha512sums=('c6d46ede9484e56830e4e133eefe94f449b42e2d7c0c1eeb17d6ae3441f011ff291d1f1d1ffbf863ce5f416ab788552f0dfde7e17773fe60dc2139b935b29766')
 
 build() {
+  if [[ $CARCH == "aarch64" ]]; then
+  	export CXXFLAGS="$CXXFLAGS -flax-vector-conversions"
+  fi
   cd openpgl-$_pkgver
   cmake \
     -Bbuild \
