--- a/arch-deps/embree/PKGBUILD
+++ b/arch-deps/embree/PKGBUILD
@@ -3,34 +3,35 @@
 # Contributor: Lukas Jirkovsky <l.jirkovsky@gmail.com>
 
 pkgname=embree
-pkgver=3.13.5
-pkgrel=10
+pkgver=4.1.0
+pkgrel=1
 pkgdesc="Collection of high-performance ray tracing kernels"
 arch=('x86_64' 'aarch64')
 url="https://embree.github.io/"
 license=('Apache')
-depends=('intel-tbb')
-makedepends=('cmake' 'ispc' 'freeglut' 'libxmu')
-source=( 
-        "git+https://github.com/embree/embree.git#branch=devel3"
-)
-sha256sums=(
-        'SKIP'
-)
+depends=('gcc-libs' 'glibc' 'intel-tbb')
+makedepends=('cmake' 'ispc' 'freeglut' 'libxmu' 'ninja')
+source=(https://github.com/embree/embree/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
+sha256sums=('117efd87d6dddbf7b164edd94b0bc057da69d6422a25366283cded57ed94738b')
 
 build() {
-    cmake -B build -S ${pkgname} \
+    # Embree detects actual ISA at runtime but we have to set a high maximum
+    # buildtime version as it would otherwise default to the builder processor.
+    cmake \
+      -B build \
+      -G Ninja \
+      -S ${pkgname}-${pkgver} \
       -DCMAKE_INSTALL_PREFIX=/usr \
-      -DCMAKE_INSTALL_LIBDIR=lib \
       -DCMAKE_BUILD_TYPE=Release \
+      -DEMBREE_ISPC_SUPPORT=ON \
       -DEMBREE_TUTORIALS=OFF \
-      -DEMBREE_RAY_MASK=ON \
-      -DEMBREE_FILTER_FUNCTION=ON \
       -DEMBREE_BACKFACE_CULLING=OFF
-    # Embree detects actual ISA at runtime
-    make -C build
+    ninja -C build
+    # Maybe enable these later once they are out of beta:
+      # -DEMBREE_SYCL_SUPPORT=ON \
+      # -DEMBREE_SYCL_LARGEGRF=ON
 }
 
 package() {
-    make -C build DESTDIR="${pkgdir}" install
+    DESTDIR="${pkgdir}" ninja -C build install
 }
