--- a/arch-deps/ispc/PKGBUILD
+++ b/arch-deps/ispc/PKGBUILD
@@ -2,55 +2,75 @@
 # Maintainer: Bruno Pagani <archange@archlinux.org>
 
 pkgname=ispc
-pkgver=1.18.1.r290+ge88e49e
+_commit=14bd04aa7e68cd33eb1d96b33058cb64d7ef76f4  # refs/tags/v1.20.0
+pkgver=1.20.0
 pkgrel=1
 pkgdesc="Compiler for high-performance SIMD programming on the CPU"
 arch=('x86_64' 'aarch64')
 url="https://ispc.github.io/"
 license=(BSD)
-depends=(ncurses zlib llvm-libs clang spirv-llvm-translator)
-makedepends=(llvm python cmake level-zero-headers level-zero-loader openmp vc-intrinsics)
-makedepends_x86_64=(lib32-glibc)
+depends=(clang gcc-libs glibc llvm-libs spirv-llvm-translator)
+makedepends=(cmake git level-zero-headers level-zero-loader llvm openmp python vc-intrinsics onetbb)
+makedepends_x86_64=(lib32-glibc intel-compute-runtime)
+#checkdepends=()
 optdepends=(
     'intel-compute-runtime: GPU support'
     'level-zero-loader: GPU support'
     'openmp: GPU support'
 )
-_gtestcommit=bf0701daa9f5b30e5882e2f8f9a5280bcba87e77
-_ispccommit=e88e49eb161aa5e75aecc843d479d5e757f5c43e
-source=(ispc-${_ispccommit}.tar.gz::https://github.com/ispc/ispc/archive/${_ispccommit}.tar.gz
-        googletest-${_gtestcommit}.tar.gz::https://github.com/google/googletest/archive/${_gtestcommit}.tar.gz
-        ispc-libclang-linking.patch::https://github.com/ispc/ispc/pull/2422.patch)
-sha256sums=('e0181f0f4dc78809166a8c28a46a3cb1f24d3dbbead4f4ff7e4ebfd8d109ebbd'
-            'b44b5d37b62e7e54887f07f9862e7dce537aa9922e80995007bcffe6ab9058d4'
-            'fdd8d27f1e7e55d414a1cd99b60758b3ef7aa6de729323213628108f4025274d')
+# NOTE: libispcrt_static.a is required by ospray during build time
+options=(staticlibs)
+source=(
+  git+https://github.com/$pkgname/$pkgname#tag=$_commit
+  $pkgname-benchmark::git+https://github.com/google/benchmark.git
+  $pkgname-googletest::git+https://github.com/google/googletest.git
+)
+sha256sums=('SKIP'
+            'SKIP'
+            'SKIP')
+
+pkgver() {
+  cd $pkgname
+  git describe --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
+}
 
 prepare() {
-  mv ispc-${_ispccommit} ispc-${pkgver} 
-  cd ${pkgname}-${pkgver}
-  # Build with unified libclang-cpp.so
-  patch -p1 < ../ispc-libclang-linking.patch
-  # Add Google Test
-  rmdir ispcrt/tests/vendor/google/googletest
-  mv ../googletest-${_gtestcommit} ispcrt/tests/vendor/google/googletest
+  cd $pkgname
+  git submodule init
+  git config submodule.benchmarks/vendor/google/benchmark.url "$srcdir/$pkgname-benchmark"
+  git config submodule.ispcrt/tests/vendor/google/googletest.url "$srcdir/$pkgname-googletest"
+  git -c protocol.file.allow=always submodule update
 }
 
 build() {
-  # Remove -Wp,-D_GLIBCXX_ASSERTIONS from CXXFLAGS as it leads to failures (https://github.com/ispc/ispc/issues/2283)
-  export CXXFLAGS="$CFLAGS"
-  cmake -B build -S ${pkgname}-${pkgver} \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DISPC_INCLUDE_EXAMPLES=OFF \
-    -DXE_ENABLED=ON \
-    -DISPC_INCLUDE_XE_EXAMPLES=OFF \
-    -DXE_DEPS_DIR=/usr
-  make -C build
+  local cmake_options=(
+    -B build
+    -D CMAKE_BUILD_TYPE=Release  # None not allowed :(
+    -D CMAKE_INSTALL_PREFIX=/usr
+    -D ISPC_INCLUDE_EXAMPLES=OFF
+    -D ISPC_OPAQUE_PTR_MODE=OFF  # suggested in https://github.com/ispc/ispc/issues/2427
+    -D ISPC_STATIC_LINK=OFF
+    -D ISPC_INCLUDE_XE_EXAMPLES=OFF
+    -D XE_ENABLED=OFF
+    -S $pkgname
+    -W no-dev
+  )
+
+  cmake "${cmake_options[@]}"
+  cmake --build build --verbose
+}
+
+check() {
+  # https://github.com/ispc/ispc/issues/2427
+  # https://github.com/ispc/ispc/issues/2428
+  # https://github.com/ispc/ispc/issues/2429
+  make -C build check-all || echo "Tests failed"
 }
 
 package() {
-  make -C build DESTDIR="${pkgdir}" install
-  install -Dm644 ${pkgname}-${pkgver}/LICENSE.txt -t "${pkgdir}"/usr/share/licenses/${pkgname}
-  # Remove uneeded files
-  rm -r "${pkgdir}/home"
-  rm "${pkgdir}"/usr/lib/libispcrt_static.a
+  DESTDIR="$pkgdir" cmake --install build
+  install -Dm644 $pkgname/LICENSE.txt -t "${pkgdir}"/usr/share/licenses/${pkgname}
+  # Remove uneeded files: https://github.com/ispc/ispc/issues/2482
+  #rm -rv "${pkgdir}"/build
 }
+
