--- a/arch-deps/openpgl/PKGBUILD
+++ b/arch-deps/openpgl/PKGBUILD
@@ -2,23 +2,23 @@
 # Contributor: Adrian Sausenthaler <aur@sausenthaler.de>
 
 pkgname=openpgl
-pkgver=0.4.1beta
-_pkgver=0.4.1-beta
-pkgrel=10
+pkgver=0.5.0
+pkgrel=5
 pkgdesc="Intel Open Path Guiding Library"
 arch=('x86_64' 'aarch64')
-url="https://github.com/openpathguidinglibrary/openpgl"
+url="https://github.com/openpathguidinglibrary/$pkgname"
 license=('Apache')
-depends=('embree')
+depends=('onetbb')
 makedepends=('cmake' 'make' 'gcc' 'ninja')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/OpenPathGuidingLibrary/openpgl/archive/refs/tags/v${_pkgver}.tar.gz")
-sha512sums=('c6d46ede9484e56830e4e133eefe94f449b42e2d7c0c1eeb17d6ae3441f011ff291d1f1d1ffbf863ce5f416ab788552f0dfde7e17773fe60dc2139b935b29766')
+source=("$pkgname-$pkgver::git+$url#branch=fix/linux-arm-and-visibility")
+
+sha512sums=('SKIP')
 
 build() {
-  if [[ $CARCH == "aarch64" ]]; then
-  	export CXXFLAGS="$CXXFLAGS -flax-vector-conversions"
-  fi
-  cd openpgl-$_pkgver
+  #if [[ $CARCH == "aarch64" ]]; then
+  #	export CXXFLAGS="$CXXFLAGS -flax-vector-conversions"
+  #fi
+  cd openpgl-$pkgver
   cmake \
     -Bbuild \
     -GNinja \
@@ -30,6 +30,7 @@ build() {
 }
 
 package() {
-  cd openpgl-$_pkgver
+  cd openpgl-$pkgver
   DESTDIR="$pkgdir" ninja -C build install
 }
+
