--- a/arch-package/PKGBUILD
+++ b/arch-package/PKGBUILD
@@ -5,7 +5,7 @@
 #  - Disabled CUDA and Optix Cycles device support
 
 pkgname=blender
-pkgver=3.6.0
+pkgver=3.6.2
 pkgrel=1
 epoch=20
 pkgdesc="A fully integrated 3D graphics creation suite"
@@ -18,16 +18,20 @@ depends=('libpng' 'libtiff' 'openexr' 'python' 'desktop-file-utils' 'python-requ
          'openimageio' 'libsndfile' 'jack' 'opencolorio' 'openshadinglanguage' 'alembic'
          'jemalloc' 'libspnav' 'ptex' 'opensubdiv' 'openvdb' 'log4cplus' 'sdl2' 'draco' 'libepoxy' 'embree')
 depends_x86_64=('openimagedenoise')
-makedepends=('cmake' 'boost' 'mesa' 'git' 'llvm' 'ninja' 'patch' 'svn')
+makedepends=('cmake' 'boost' 'mesa' 'git' 'llvm15' 'ninja' 'patch' 'svn')
 options=('!strip')
-source=("git+https://projects.blender.org/blender/blender.git#tag=v$pkgver"
+# git+https://projects.blender.org/blender/blender.git#tag=v$pkgver
+_commit=ffe93138751e
+source=("git+https://projects.blender.org/blender/blender.git#commit=$_commit"
         "git+https://github.com/DLTcollab/sse2neon.git#tag=v1.6.0"
         force-draco1.patch
-        force-draco2.patch)
+        force-draco2.patch
+        blender-new-sycl.patch)
 sha512sums=('SKIP'
             'SKIP'
             'e239da4f3906f1b54265435181cf770bae3d269c8d915df9a73861e6ee71ec70bf2339426e7c81a91e5a567273b3b3742d7a99feefd3398d821b26e1ff3a56d0'
-            'c162646eba42ea7112cfb615466c2cbaddac8d254d4a9e91cf887c5bffef1325a983701163223a1fdee091310ac5574a400347aab7f52321825b5fa3d5a9036f')
+            'c162646eba42ea7112cfb615466c2cbaddac8d254d4a9e91cf887c5bffef1325a983701163223a1fdee091310ac5574a400347aab7f52321825b5fa3d5a9036f'
+            'b1eb2379b673514da2599c5fc3be7fc597d4d3d23550ff392b364ae53f67e332bbed7612a0d06cbf9cd255ad6833bdb29f7e3fe668471d57e91407092419f4dd')
 
 prepare() {
   cd "$pkgname"
@@ -36,6 +40,8 @@ prepare() {
   # fix draco
   patch -p1 -i "$srcdir"/force-draco1.patch
   patch -p1 -d scripts/addons -i "$srcdir"/force-draco2.patch
+  patch -p1 -i "$srcdir"/blender-new-sycl.patch
+
 
 }
 
@@ -54,6 +60,7 @@ build() {
     -Cbuild_files/cmake/config/blender_release.cmake \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_BUILD_TYPE=Release \
+    -DLLVM_VERSION=15 \
     -DWITH_INSTALL_PORTABLE=OFF \
     -DWITH_PYTHON_INSTALL=OFF \
     -DPYTHON_VERSION=$PYTHON_VER \
