--- a/arch-package/PKGBUILD
+++ b/arch-package/PKGBUILD
@@ -26,12 +26,14 @@ source=("git+https://projects.blender.org/blender/blender.git#tag=v$pkgver"
         "git+https://github.com/DLTcollab/sse2neon.git#tag=v1.6.0"
         force-draco1.patch
         force-draco2.patch
-        blender-new-sycl.patch)
+        blender-new-sycl.patch
+        111915.patch)
 sha512sums=('SKIP'
             'SKIP'
             'e239da4f3906f1b54265435181cf770bae3d269c8d915df9a73861e6ee71ec70bf2339426e7c81a91e5a567273b3b3742d7a99feefd3398d821b26e1ff3a56d0'
             'c162646eba42ea7112cfb615466c2cbaddac8d254d4a9e91cf887c5bffef1325a983701163223a1fdee091310ac5574a400347aab7f52321825b5fa3d5a9036f'
-            'b1eb2379b673514da2599c5fc3be7fc597d4d3d23550ff392b364ae53f67e332bbed7612a0d06cbf9cd255ad6833bdb29f7e3fe668471d57e91407092419f4dd')
+            'b1eb2379b673514da2599c5fc3be7fc597d4d3d23550ff392b364ae53f67e332bbed7612a0d06cbf9cd255ad6833bdb29f7e3fe668471d57e91407092419f4dd'
+            '03382634c2acf713486d82c14e758365e3cfab6da48102006cc3afa6e56cbd79d32dce731fee0b5a7a02572823ca45faacbfdea3f1d2ef21b66ba982c2349cb2')
 
 prepare() {
   cd "$pkgname"
@@ -41,6 +43,7 @@ prepare() {
   patch -p1 -i "$srcdir"/force-draco1.patch
   patch -p1 -d scripts/addons -i "$srcdir"/force-draco2.patch
   patch -p1 -i "$srcdir"/blender-new-sycl.patch
+  patch -p1 -i "$srcdir"/111915.patch
 
 
 }
@@ -70,8 +73,7 @@ build() {
     -DCMAKE_CXX_FLAGS="-I /usr/include/python$PYTHON_VER" \
     -DSSE2NEON_INCLUDE_DIR="$srcdir/sse2neon" \
     -DWITH_CYCLES_DEVICE_CUDA=OFF \
-    -DWITH_CYCLES_DEVICE_OPTIX=OFF \
-    -DWITH_GHOST_SDL=ON
+    -DWITH_CYCLES_DEVICE_OPTIX=OFF
   cmake --build build
 }
 
