--- a/arch-deps/embree/PKGBUILD
+++ b/arch-deps/embree/PKGBUILD
@@ -11,8 +11,8 @@ url="https://embree.github.io/"
 license=('Apache')
 depends=('gcc-libs' 'glibc' 'intel-tbb')
 makedepends=('cmake' 'ispc' 'freeglut' 'libxmu' 'ninja')
-source=(https://github.com/embree/embree/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
-sha256sums=('b0479ce688045d17aa63ce6223c84b1cdb5edbf00d7eda71c06b7e64e21f53a0')
+source=(git+https://github.com/$pkgname/$pkgname#tag=v$pkgver)
+sha256sums=('SKIP')
 
 build() {
     # Embree detects actual ISA at runtime but we have to set a high maximum
@@ -20,7 +20,7 @@ build() {
     cmake \
       -B build \
       -G Ninja \
-      -S ${pkgname}-${pkgver} \
+      -S ${pkgname} \
       -DCMAKE_INSTALL_PREFIX=/usr \
       -DCMAKE_BUILD_TYPE=Release \
       -DEMBREE_ISPC_SUPPORT=ON \
