--- a/arch-deps/ispc/PKGBUILD
+++ b/arch-deps/ispc/PKGBUILD
@@ -2,15 +2,14 @@
 # Maintainer: Bruno Pagani <archange@archlinux.org>
 
 pkgname=ispc
-_commit=f925f2563441a36eff1cb7a617934253dc9c100c  # refs/tags/v1.21.0
-pkgver=1.21.0
+pkgver=1.24.0
 pkgrel=1
 pkgdesc="Compiler for high-performance SIMD programming on the CPU"
 arch=('x86_64' 'aarch64')
 url="https://ispc.github.io/"
-license=(BSD)
-depends=(clang gcc-libs glibc llvm-libs spirv-llvm-translator)
-makedepends=(cmake git level-zero-headers level-zero-loader llvm openmp python vc-intrinsics onetbb)
+license=(BSD-3-Clause)
+depends=(clang gcc-libs glibc llvm-libs spirv-llvm-translator onetbb)
+makedepends=(cmake git level-zero-headers level-zero-loader llvm openmp python vc-intrinsics)
 makedepends_x86_64=(lib32-glibc intel-compute-runtime)
 #checkdepends=()
 optdepends=(
@@ -21,18 +20,14 @@ optdepends=(
 # NOTE: libispcrt_static.a is required by ospray during build time
 options=(staticlibs)
 source=(
-  git+https://github.com/$pkgname/$pkgname#tag=$_commit
+  "git+https://github.com/$pkgname/$pkgname#tag=v$pkgver"
   $pkgname-benchmark::git+https://github.com/google/benchmark.git
   $pkgname-googletest::git+https://github.com/google/googletest.git
 )
-sha256sums=('SKIP'
+sha256sums=('f9a5b259f3664eecbbcbaab8df1964d70ccbb7bcbbc1574de3aae9dfdb9ee823'
             'SKIP'
             'SKIP')
 
-pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/^v//;s/\([^-]*-g\)/r\1/;s/-/./g'
-}
 
 prepare() {
   cd $pkgname
@@ -71,6 +66,6 @@ package() {
   DESTDIR="$pkgdir" cmake --install build
   install -Dm644 $pkgname/LICENSE.txt -t "${pkgdir}"/usr/share/licenses/${pkgname}
   # Remove uneeded files: https://github.com/ispc/ispc/issues/2482
-  #rm -rv "${pkgdir}"/build
+  rm -rv "${pkgdir}"/build
 }
 
