--- a/arch-deps/embree/PKGBUILD
+++ b/arch-deps/embree/PKGBUILD
@@ -5,6 +5,7 @@
 pkgname=embree
 pkgver=4.3.2
 pkgrel=1
+epoch=20
 pkgdesc="Collection of high-performance ray tracing kernels"
 arch=('x86_64' 'aarch64')
 url="https://embree.github.io/"
