--- a/arch-deps/ispc/PKGBUILD
+++ b/arch-deps/ispc/PKGBUILD
@@ -4,6 +4,7 @@
 pkgname=ispc
 pkgver=1.24.0
 pkgrel=1
+epoch=20
 pkgdesc="Compiler for high-performance SIMD programming on the CPU"
 arch=('x86_64' 'aarch64')
 url="https://ispc.github.io/"
