Explicitly disable GPU features, remove precache

--- a/arch-package/PKGBUILD
+++ b/arch-package/PKGBUILD
@@ -78,6 +78,7 @@ depends=(
   'python'
   'python-numpy'
   'python-requests'
+  'python-zstandard'
   'sdl2'
   'shared-mime-info'
   'usd'
@@ -164,7 +165,7 @@ build() {
   local cmake_options=(
     -B build
     -C "$pkgname/build_files/cmake/config/blender_release.cmake"
-    -C "$srcdir/precache"
+    #-C "$srcdir/precache"
     -D CMAKE_BUILD_TYPE=Release
     -D CMAKE_INSTALL_PREFIX=/usr
     -D WITH_LINKER_MOLD=ON
@@ -175,13 +176,16 @@ build() {
     -D OCLOC_INSTALL_DIR=/usr
     #-D OPTIX_ROOT_DIR="$srcdir"
     -D PYTHON_VERSION="$(_get_pyver)"
-    -D SYCL_ROOT_DIR=/opt/intel/oneapi/compiler/latest
-    -D SYCL_OFFLINE_COMPILER_PARALLEL_JOBS=8
+    #-D SYCL_ROOT_DIR=/opt/intel/oneapi/compiler/latest
+    #-D SYCL_OFFLINE_COMPILER_PARALLEL_JOBS=8
     -D USD_ROOT_DIR=/usr
     -D WITH_CYCLES_OSL=ON
     -D WITH_CYCLES_DEVICE_CUDA=OFF
     -D WITH_CYCLES_DEVICE_OPTIX=OFF
-    #-D WITH_CYCLES_OSL=OFF
+    -D WITH_CYCLES_DEVICE_HIP=OFF
+    -D WITH_CYCLES_DEVICE_ONEAPI=OFF
+    -D WITH_CYCLES_HIP_BINARIES=OFF
+    -D WITH_CYCLES_ONEAPI_BINARIES=OFF
     -D WITH_INSTALL_PORTABLE=OFF
     -D WITH_PYTHON_INSTALL=OFF
     -D SSE2NEON_INCLUDE_DIR="$srcdir/sse2neon"
