--- a/arch-deps/embree/PKGBUILD
+++ b/arch-deps/embree/PKGBUILD
@@ -1,9 +1,7 @@
-# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
-# Maintainer: Bruno Pagani <archange@archlinux.org>
-# Contributor: Lukas Jirkovsky <l.jirkovsky@gmail.com>
+# Based on https://gitlab.archlinux.org/archlinux/packaging/packages/embree/-/blob/main/PKGBUILD
 
 pkgname=embree
-pkgver=4.3.2
+pkgver=4.3.3
 pkgrel=1
 epoch=20
 pkgdesc="Collection of high-performance ray tracing kernels"
@@ -12,8 +10,8 @@ url="https://embree.github.io/"
 license=('Apache')
 depends=('gcc-libs' 'glibc' 'intel-tbb')
 makedepends=('cmake' 'ispc' 'freeglut' 'libxmu' 'ninja')
-source=(git+https://github.com/$pkgname/$pkgname#tag=v$pkgver)
-sha256sums=('4137eb62ffde3d59e7d15883fd0f720048171f973148226a4d8506c0229ae80b')
+source=(https://github.com/embree/embree/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
+sha256sums=('8a3bc3c3e21aa209d9861a28f8ba93b2f82ed0dc93341dddac09f1f03c36ef2d')
 
 build() {
     # Embree detects actual ISA at runtime but we have to set a high maximum
@@ -21,7 +19,7 @@ build() {
     cmake \
       -B build \
       -G Ninja \
-      -S ${pkgname} \
+      -S ${pkgname}-${pkgver} \
       -DCMAKE_INSTALL_PREFIX=/usr \
       -DCMAKE_BUILD_TYPE=Release \
       -DEMBREE_ISPC_SUPPORT=ON \
